feat: implementing a new recognizer raw result resolver and added some dummy data to test on

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group
+      android:scaleX="0.45"
+      android:scaleY="0.45"
+      android:translateX="6.6"
+      android:translateY="6.6">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="@color/colorLauncherForeground"
+        android:pathData="M13.132,11.313L12.739,10.733L12.739,10.733L13.132,11.313ZM4.987,10.343L4.314,10.535L4.314,10.535L4.987,10.343ZM4.448,8.459L3.775,8.651L3.775,8.651L4.448,8.459ZM2.339,9.024L3.018,8.854L3.018,8.854L2.339,9.024ZM3.899,15.262L4.578,15.092L4.578,15.092L3.899,15.262ZM13.745,21C13.745,21.387 14.058,21.7 14.444,21.7C14.831,21.7 15.144,21.387 15.144,21H13.745ZM15.144,18.333C15.144,17.947 14.831,17.633 14.444,17.633C14.058,17.633 13.745,17.947 13.745,18.333H15.144ZM18.5,10V9.3C18.362,9.3 18.227,9.341 18.112,9.418L18.5,10ZM15.5,10H16.2C16.2,9.613 15.887,9.3 15.5,9.3V10ZM15.5,12H14.8C14.8,12.258 14.942,12.495 15.17,12.617C15.397,12.739 15.674,12.726 15.888,12.582L15.5,12ZM10.889,11.3C9.066,11.3 7.589,9.823 7.589,8H6.189C6.189,10.596 8.293,12.7 10.889,12.7V11.3ZM7.589,8C7.589,6.177 9.066,4.7 10.889,4.7V3.3C8.293,3.3 6.189,5.404 6.189,8H7.589ZM10.889,4.7C12.712,4.7 14.189,6.177 14.189,8H15.589C15.589,5.404 13.485,3.3 10.889,3.3V4.7ZM14.189,8C14.189,9.136 13.615,10.139 12.739,10.733L13.525,11.892C14.769,11.048 15.589,9.62 15.589,8H14.189ZM12.739,10.733C12.212,11.091 11.576,11.3 10.889,11.3V12.7C11.865,12.7 12.773,12.402 13.525,11.892L12.739,10.733ZM18.256,21V18.778H16.855V21H18.256ZM12.667,13.189H9.688V14.589H12.667V13.189ZM5.66,10.151L5.122,8.266L3.775,8.651L4.314,10.535L5.66,10.151ZM1.66,9.193L3.22,15.432L4.578,15.092L3.018,8.854L1.66,9.193ZM3.22,15.432C3.488,16.504 4.451,17.256 5.556,17.256V15.856C5.093,15.856 4.69,15.541 4.578,15.092L3.22,15.432ZM3.399,6.967C2.233,6.967 1.377,8.062 1.66,9.193L3.018,8.854C2.956,8.606 3.144,8.367 3.399,8.367V6.967ZM5.122,8.266C4.902,7.497 4.199,6.967 3.399,6.967V8.367C3.574,8.367 3.727,8.483 3.775,8.651L5.122,8.266ZM9.688,13.189C7.817,13.189 6.174,11.949 5.66,10.151L4.314,10.535C4.999,12.935 7.192,14.589 9.688,14.589V13.189ZM18.256,18.778C18.256,15.691 15.753,13.189 12.667,13.189V14.589C14.98,14.589 16.855,16.464 16.855,18.778H18.256ZM15.144,21V18.333H13.745V21H15.144ZM14.5,3.7H19.5V2.3H14.5V3.7ZM20.8,5V8H22.2V5H20.8ZM19.5,9.3H18.5V10.7H19.5V9.3ZM15.5,9.3H14V10.7H15.5V9.3ZM18.112,9.418L15.112,11.418L15.888,12.582L18.888,10.582L18.112,9.418ZM16.2,12V10H14.8V12H16.2ZM20.8,8C20.8,8.718 20.218,9.3 19.5,9.3V10.7C20.991,10.7 22.2,9.491 22.2,8H20.8ZM19.5,3.7C20.218,3.7 20.8,4.282 20.8,5H22.2C22.2,3.509 20.991,2.3 19.5,2.3V3.7ZM14.5,2.3C13.367,2.3 12.399,2.998 11.998,3.984L13.295,4.511C13.489,4.034 13.956,3.7 14.5,3.7V2.3Z" />
+    <path
+        android:fillColor="@color/colorLauncherForeground"
+        android:pathData="M16.5,6.5m-0.5,0a0.5,0.5 0,1 1,1 0a0.5,0.5 0,1 1,-1 0" />
+    <path
+        android:fillColor="@color/colorLauncherForeground"
+        android:pathData="M18.5,6.5m-0.5,0a0.5,0.5 0,1 1,1 0a0.5,0.5 0,1 1,-1 0" />
+  </group>
 </vector>
