--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -16,6 +16,7 @@
 -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/camera_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -32,6 +33,7 @@
         android:layout_height="match_parent" />
 
     <include
+        android:visibility="gone"
         android:id="@+id/bottom_sheet_layout"
         layout="@layout/info_bottom_sheet" />
 
@@ -39,13 +41,11 @@
         android:id="@+id/recyclerview_results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek_height"
+        android:layout_gravity="bottom"
         android:background="@color/bottom_sheet_background"
         android:clipToPadding="true"
+        tools:itemCount="1"
         android:padding="@dimen/bottom_sheet_padding"
-        app:layout_anchor="@id/bottom_sheet_layout"
-        app:layout_anchorGravity="top"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     <View
@@ -54,4 +54,5 @@
         android:background="@color/mp_color_primary"
         app:layout_anchor="@id/recyclerview_results"
         app:layout_anchorGravity="bottom" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
