--- a/app/src/main/res/layout/item_gesture_recognizer_result.xml
+++ b/app/src/main/res/layout/item_gesture_recognizer_result.xml
@@ -17,23 +17,49 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/tvLabel"
+        android:id="@+id/tvLeftHandSignLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/bottom_sheet_text_color"
+        android:textColor="#F44336"
         android:textSize="@dimen/bottom_sheet_text_size"
-        app:layout_constraintEnd_toStartOf="@+id/tvScore"
+        android:text="Left hand sign:"
+        app:layout_constraintEnd_toStartOf="@+id/tvLeftHandSignScore"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvScore"
+        android:id="@+id/tvLeftHandSignScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/bottom_sheet_text_size"
+        tools:text="85%"
+        android:textColor="@color/colorTextTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvRightHandSignLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="#4CAF50"
+        android:layout_marginTop="5dp"
+        android:textSize="@dimen/bottom_sheet_text_size"
+        android:text="Right hand sign:"
+        app:layout_constraintEnd_toStartOf="@+id/tvRightHandSignScore"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvLeftHandSignLabel" />
+
+    <TextView
+        android:id="@+id/tvRightHandSignScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/bottom_sheet_text_size"
+        tools:text="85%"
+        android:textColor="@color/colorTextTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvRightHandSignLabel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
