impr: improved FrameResultResolver and created a new activity for SignToTextTranslator

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,5 @@
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorTextTitle">#0A0A0A</color>
     <color name="colorTextSubtitle">#80000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
